--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ flex-direction: row-reverse;
     flex-direction: row;
     flex-wrap:nowrap;
     padding: 10px 20px;
-    border: 3px solid #03318C;
+    border: 3px solid #6d872d;
     border-radius: 15px;
     width: 150px;
   
